--- a/inedex.html
+++ b/inedex.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <div class="header-container">
+      <div class="container-fluid header-container">
         <div class="header-contents">
           <h1>
             初心者でも始めやすい<br>スタートプラン
@@ -38,23 +38,23 @@
   </header>
 
   <div class="problem">
-    <div class="problem-container">
-      <h2 class="problem-h2">
+    <div class="container problem-container">
+      <h2 class="problem h2">
         こんなお悩みありませんか？
       </h2>
-      <div class="row-problem">
+      <div class="row row-problem">
         <div class="col-md-4 col-problem">
-          <img src="img/problem-1.png" clat="" class="img-fluid">
+          <img src="img/problem-1.png" alt="問題1" class="img-fluid">
         </div>
         <div class="col-md-4 col-problem">
-          <img src="img/problem-2.png" clat="" class="img-fluid">
+          <img src="img/problem-2.png" alt="問題2" class="img-fluid">
         </div>
         <div class="col-md-4 col-problem">
-          <img src="img/problem-3.png" clat="" class="img-fluid">
+          <img src="img/problem-3.png" alt="問題3" class="img-fluid">
         </div>
       </div>
       <div class="problem-contents_1">
-        <img src="img/problem-arrow.png" alt="" class="img-fluid">
+        <img src="img/problem-arrow.png" alt="問題矢印" class="img-fluid">
       </div>
       <div class="problem-contents_2">
         <p>
@@ -65,12 +65,12 @@
   </div>
 
   <div class="point">
-    <div class="point-container">
+    <div class="container point-container">
       <h2>
         最短3か月で<br>スコアアップを可能にした<br>3つのポイント
       </h2>
       <div class="point-contents_1">
-        <img src="img/point-1.png" alt="" class="img-fluid">
+        <img src="img/point-1.png" alt="ポイント1" class="img-fluid">
         <h3>
           英語の知識とルール理解<br>文法・語彙トレーニング
         </h3>
@@ -80,7 +80,7 @@
       </div>
       <div class="point-box">
         <div class="point-contents_2">
-          <img src="img/point-2.png" alt="" class="img-fluid">
+          <img src="img/point-2.png" alt="ポイント2" class="img-fluid">
           <h3>
             スタディイングリッシュオリジナル<br>3ステップシャドーイング
           </h3>
@@ -89,7 +89,7 @@
           </p>
         </div>
         <div class="point-contents_3">
-          <img src="img/point-3.png" alt="" class="img-fluid">
+          <img src="img/point-3.png" alt="ポイント3" class="img-fluid">
           <h3>
             最大14回分の過去問攻略<br>模試演習トレーニング
           </h3>
@@ -102,37 +102,37 @@
   </div>
 
   <div class="review">
-    <div class="review-container">
+    <div class="container review-container">
       <h2>
         サービス利用者の方から、続々と高い評価を頂いております！
       </h2>
       <div class="review-contents">
         <div class="review-contents_1">
-          <img  class="pc" src="img/review-1_3_pc.png" alt="" >
-          <img class="sp" src="img/revier1-sp.png" alt="">
+          <img  class="pc" src="img/review-1_3_pc.png" alt="口コミ1_pc" >
+          <img class="sp" src="img/revier1-sp.png" alt="口コミ1_sp">
         </div>
         <div class="review-contents_2">
-          <img class="pc" src="img/review-2_3_pc.png" alt="" >
-          <img class="sp" src="img/review2-sp.png" alt="">
+          <img class="pc" src="img/review-2_3_pc.png" alt="口コミ2_pc" >
+          <img class="sp" src="img/review2-sp.png" alt="口コミ2_sp">
         </div>
         <div class="review-contents_3">
-          <img class="pc" src="img/review-3_3_pc.png" alt="">
-          <img class="sp" src="img/review3-sp.png" alt="">
+          <img class="pc" src="img/review-3_3_pc.png" alt="口コミ3_pc">
+          <img class="sp" src="img/review3-sp.png" alt="口コミ3_sp">
         </div>
         <div class="review-contents_4">
-          <img class="pc" src="img/review-4_3_pc.png" alt="">
-          <img class="sp" src="img/review4-sp.png" alt="" >
+          <img class="pc" src="img/review-4_3_pc.png" alt="口コミ4_pc">
+          <img class="sp" src="img/review4-sp.png" alt="口コミ4_sp" >
         </div>
       </div>
     </div>
   </div>
 
   <div class="teacher">
-    <div class="teacher-container">
+    <div class="container teacher-container">
       <h2>
         講師紹介
       </h2>
-      <img src="img/teacher-icon.png" alt="" class="img-fluid">
+      <img src="img/teacher-icon.png" alt="教師" class="img-fluid">
       <p>
         テキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキスト
       </p>
@@ -140,20 +140,20 @@
   </div>
 
   <div class="qa">
-    <div class="qa-container">
+    <div class="container qa-container">
       <h2>
         よくあるご質問
       </h2>
       <div class="qa-contents">
         <div class="qa-contents_1">
           <div class="qa-contents_1_1">
-           <img src="img/qa-q.png" alt="" class="img-fluid">
+           <img src="img/qa-q.png" alt="質問">
             <p>
               中学、高校の学習内容がわからないのですが大丈夫でしょうか？
             </p>
           </div>
           <div class="qa-contents_1_2">
-            <img src="img/qa-a.png" alt="" class="img-fluid">
+            <img src="img/qa-a.png" alt="回答">
             <p>
               もちろん大丈夫です。確かな指導力のある講師が、基礎から丁寧にマンツーマンで指導します。<br>現状分析を行ったうえで指導に入るので、レベルに合わせた指導を通じて着実に力がつきます。
             </p>
@@ -162,13 +162,13 @@
 
        <div class="qa-contents_2">
           <div class="qa-contents_2_1">
-            <img src="img/qa-q.png" alt="" class="img-fluid">
+            <img src="img/qa-q.png" alt="質問" >
             <p>
               仕事が忙しく、決まった時間に自宅にいることができません。<br>自宅以外でも指導を受けられますか？
             </p>
           </div>
           <div class="qa-contents_2_2">
-            <img src="img/qa-a.png" alt="" class="img-fluid">
+            <img src="img/qa-a.png" alt="回答" >
             <p>
               ご自宅はもちろん、スタディイングリッシュの教室や喫茶店などでも指導を受けることができます。<br>講師が伺うので、仕事帰りに職場の近くで受講するなど、仕事が忙しい方でも無理なく両立できます。
             </p>
@@ -177,13 +177,13 @@
 
         <div class="qa-contents_3">
           <div class="qa-contents_3_1">
-            <img src="img/qa-q.png" alt="" class="img-fluid">
+            <img src="img/qa-q.png" alt="質問" >
             <p>
               平日は仕事があるので、土日の空いた時間にレッスンをお願いできますか？
             </p>
           </div>
           <div class="qa-contents_3_2">
-            <img src="img/qa-a.png" alt="" class="img-fluid">
+            <img src="img/qa-a.png" alt="回答" >
             <p>
               皆さまのライフスタイルに合わせてプランを立てますので、仕事の前後で受講することも可能です。<br>お勤めの方なら会社が休みの日や仕事帰りに受講したりと、柔軟に指導日・時間帯を決めることが<br>できます。またコー スによっては週ごとに受講時間を設定することも可能です。
             </p>
@@ -192,13 +192,13 @@
 
         <div class="qa-contents_4">
           <div class="qa-contents_4_1">
-              <img src="img/qa-q.png" alt="" class="img-fluid">
+              <img src="img/qa-q.png" alt="質問" class="img-fluid">
             <p>
               どのような講師の指導が受講できますか？
             </p>
           </div>
           <div class="qa-contents_4_2">
-            <img src="img/qa-a.png" alt="" class="img-fluid">
+            <img src="img/qa-a.png" alt="回答" >
             <p>
               TOEIC®の対策講座には、プロ講師や指導経験者などが多く在籍しております。<br>指導力はもちろん、経歴や人柄でも厳しい審査をクリアした講師ですので、<br>安心して受講いただくことができます。
             </p>
@@ -207,13 +207,13 @@
 
         <div class="qa-contents_5">
           <div class="qa-contents_5_1">
-              <img src="img/qa-q.png" alt="" class="img-fluid">
+              <img src="img/qa-q.png" alt="質問" >
             <p>
               受講料金について詳しく教えてください。
             </p>
           </div>
             <div class="qa-contents_5_2">
-              <img src="img/qa-a.png" alt="" class="img-fluid">
+              <img src="img/qa-a.png" alt="回答" >
               <p>
                 受講料金は、コース・プランによって異なります。スタディイングリッシュのTOEIC®対策講座では、<br>一人ひとりの現状に合わせてコース内容をアレンジし、専任の講師がマンツーマンで指導を行います。<br>また、受講場所や受講時間も、あなたのライフスタイルに合わせて自由にアレンジすることができます。<br>まずはお気軽 にご相談ください。<br>受講料に関するお問い合わせはこちら
               </p>
@@ -224,7 +224,7 @@
   </div>
 
   <footer>
-    <div class="footer-container">
+    <div class="container footer-container">
       <h2>
         その他のご質問やご不明な点がありましたら、お問合せください。<br>専門のコンシュルジュが親身に対応させていただきます。
       </h2>
@@ -233,7 +233,9 @@
           授業料の問い合わせ・資料請求はこちら
         </h3>
       </div>
+
       <div class="footer-contents_2">
+        <div class="footer-contents_2--1">
         <div class="footer-contents_3">
           <p class="footer-contents_3_1">
             お電話でも<br>受け付けております
@@ -253,14 +255,16 @@
             9:00～22:00 (土日祝日も受付)
           </p>
         </div>
+      </div>
         <div class="footer-contents_9">
-          <img src="img/footer-button.png" alt="" class="img-fluid">
+          <img src="img/footer-button.png" alt="ボタン">
           <p>
             料金を問い合わせる(無料)
           </p>
         </div>
+        </div>
       </div>
-    </div>
+
   </footer>
 
 
