--- a/inedex.html
+++ b/inedex.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <div class="container-fluid header-container">
+      <div class="container header-container">
         <div class="header-contents">
           <h1>
             初心者でも始めやすい<br>スタートプラン
