--- a/inedex.html
+++ b/inedex.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <div class="container header-container">
+      <!-- <div class="container-fluid header-container"> -->
         <div class="header-contents">
           <h1>
             初心者でも始めやすい<br>スタートプラン
@@ -34,7 +34,7 @@
               月会費<span class="header-contents-4">10,980円(税込)</span>
             </p>
         </div>
-      </div>
+   
   </header>
 
   <div class="problem">
