--- a/inedex.html
+++ b/inedex.html
@@ -16,26 +16,23 @@
   </head>
   <body>
     <header>
-      <!-- <div class="container-fluid header-container"> -->
         <div class="header-contents">
           <h1>
             初心者でも始めやすい<br>スタートプラン
           </h1>
-          <div class="header-contents-1">
-            <h2 class="header-h2">
+          <div class="header-contents_1">
+            <h2 class="header h2">
               TOEICデビュープラン
             </h2>
-            <p class="header-contents-2"></p>
             <p>
               3か月間で英語学習の基礎から<br>はじまり勉強方法、スコアアッ<br>プまでしっかり学んでTOEICの<br>不安を解消します。
             </p>
           </div>
-            <p class="header-contents-3">
-              月会費<span class="header-contents-4">10,980円(税込)</span>
+            <p class="header-contents_3">
+              月会費<span class="header-contents_4">10,980円(税込)</span>
             </p>
         </div>
-   
-  </header>
+   </header>
 
   <div class="problem">
     <div class="container problem-container">
@@ -108,7 +105,7 @@
       </h2>
       <div class="review-contents">
         <div class="review-contents_1">
-          <img  class="pc" src="img/review-1_3_pc.png" alt="口コミ1_pc" >
+          <img class="pc" src="img/review-1_3_pc.png" alt="口コミ1_pc" >
           <img class="sp" src="img/revier1-sp.png" alt="口コミ1_sp">
         </div>
         <div class="review-contents_2">
@@ -188,11 +185,11 @@
               皆さまのライフスタイルに合わせてプランを立てますので、仕事の前後で受講することも可能です。<br>お勤めの方なら会社が休みの日や仕事帰りに受講したりと、柔軟に指導日・時間帯を決めることが<br>できます。またコー スによっては週ごとに受講時間を設定することも可能です。
             </p>
            </div>
-          </div>
+        </div>
 
         <div class="qa-contents_4">
           <div class="qa-contents_4_1">
-              <img src="img/qa-q.png" alt="質問" class="img-fluid">
+            <img src="img/qa-q.png" alt="質問" class="img-fluid">
             <p>
               どのような講師の指導が受講できますか？
             </p>
@@ -207,7 +204,7 @@
 
         <div class="qa-contents_5">
           <div class="qa-contents_5_1">
-              <img src="img/qa-q.png" alt="質問" >
+            <img src="img/qa-q.png" alt="質問" >
             <p>
               受講料金について詳しく教えてください。
             </p>
@@ -235,37 +232,36 @@
       </div>
 
       <div class="footer-contents_2">
-        <div class="footer-contents_2--1">
-        <div class="footer-contents_3">
-          <p class="footer-contents_3_1">
-            お電話でも<br>受け付けております
-          </p>
-          <p class="footer-contents_4">
-            0000-000-000
-          </p>
-        </div>
+        <div class="footer-contents_2_1">
+          <div class="footer-contents_3">
+            <p class="footer-contents_3_1">
+              お電話でも<br>受け付けております
+            </p>
+            <p class="footer-contents_4">
+              0000-000-000
+            </p>
+          </div>
 
-        <div class="footer-contents_5">
-          <div class="footer-contents_6">
-          <p class="footer-contents_7">
-            受付時間
-          </p>
+          <div class="footer-contents_5">
+            <div class="footer-contents_6">
+              <p class="footer-contents_7">
+                受付時間
+              </p>
+            </div>
+              <p class="footer-contents_8">
+                9:00～22:00 (土日祝日も受付)
+              </p>
+          </div>
         </div>
-          <p class="footer-contents_8">
-            9:00～22:00 (土日祝日も受付)
-          </p>
-        </div>
-      </div>
         <div class="footer-contents_9">
           <img src="img/footer-button.png" alt="ボタン">
           <p>
             料金を問い合わせる(無料)
           </p>
         </div>
-        </div>
       </div>
-
-  </footer>
+    </div>
+   </footer>
 
 
 
