--- a/inedex.html
+++ b/inedex.html
@@ -35,7 +35,7 @@
    </header>
 
   <div class="problem">
-    <div class="container problem-container">
+    <div class="container">
       <h2 class="problem h2">
         こんなお悩みありませんか？
       </h2>
@@ -62,7 +62,7 @@
   </div>
 
   <div class="point">
-    <div class="container point-container">
+    <div class="container">
       <h2>
         最短3か月で<br>スコアアップを可能にした<br>3つのポイント
       </h2>
@@ -99,7 +99,7 @@
   </div>
 
   <div class="review">
-    <div class="container review-container">
+    <div class="container">
       <h2>
         サービス利用者の方から、続々と高い評価を頂いております！
       </h2>
@@ -125,7 +125,7 @@
   </div>
 
   <div class="teacher">
-    <div class="container teacher-container">
+    <div class="container">
       <h2>
         講師紹介
       </h2>
@@ -137,7 +137,7 @@
   </div>
 
   <div class="qa">
-    <div class="container qa-container">
+    <div class="container">
       <h2>
         よくあるご質問
       </h2>
@@ -221,7 +221,7 @@
   </div>
 
   <footer>
-    <div class="container footer-container">
+    <div class="container">
       <h2>
         その他のご質問やご不明な点がありましたら、お問合せください。<br>専門のコンシュルジュが親身に対応させていただきます。
       </h2>
